adionado filtro de hinos por lingua

--- a/mobile/ionic.config.json
+++ b/mobile/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hinário - Louvai ao Senhor",
+  "name": "Hinário - Louvai ao Senhor (IERA)",
   "integrations": {
     "capacitor": {}
   },
